tests/test2/pass/test-for.m2
int main(){
	int i;
	i = 1;
	for (;i<2;){
		i = i + 1;
		printInt(i);
	}

	return 0;
}