tests/test2/fail/fail-functionArgument.m2
int main(){
	int a;
	int b;
	myfunc(a);
	
	return 0;
}

void myfunc(int a, int b){
	
}